# TensorGo

./: CMakeLists.txt
include/: TensorGo.h
include/operations/: operations.h
operations/: CMakeLists.txt  operations.cpp
samples/: CMakeLists.txt  test_1.cpp
util/: CMakeLists.txt  TensorGo_unittests.cpp
